--- a/CSharp/basic/Trivia.Launcher/Trivia.Launcher.csproj
+++ b/CSharp/basic/Trivia.Launcher/Trivia.Launcher.csproj
@@ -1,12 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net472</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Trivia.Domain\Trivia.Domain.csproj" />
+    <ProjectReference Include="..\Trivia.Flow\Trivia.Flow.csproj" />
   </ItemGroup>
 
 </Project>
