Gestion des réponses guidée par les premiers tests SpecFlow

--- a/CSharp/basic/SpecflowTests/SpecflowTests.csproj
+++ b/CSharp/basic/SpecflowTests/SpecflowTests.csproj
@@ -30,4 +30,8 @@
     <Folder Include="Hooks\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Trivia\Trivia.csproj" />
+  </ItemGroup>
+
 </Project>
