--- a/CSharp/basic/Trivia/Trivia.csproj
+++ b/CSharp/basic/Trivia/Trivia.csproj
@@ -75,6 +75,12 @@
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Trivia.Domain\Trivia.Domain.csproj">
+      <Project>{8ec084be-40a8-4af7-b542-4f2a0a583922}</Project>
+      <Name>Trivia.Domain</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\xunit.core.2.3.1\build\xunit.core.targets" Condition="Exists('..\packages\xunit.core.2.3.1\build\xunit.core.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
